# ouroboros

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.rst  NEWS.rst  README.rst  devbox.json  lock_version_resolve.json  resolve.json  waf  wscript
.github/workflows/: cpp-internal.yml  go.yml  python.yml
benchmark/: CMakeLists.txt  main.cpp
go/: README.md  go.mod  go.sum
go/ouroboros/: doc.go  reader.go  reader_test.go  version.go
python/: README.md  pyproject.toml
python/ouroboros_py/: __init__.py  reader.py
python/tests/: __init__.py  conftest.py  test_reader.py
src/ouroboros/: buffer_format.hpp  error_code.cpp  error_code.hpp  error_tags.hpp  portable_atomic.cpp  portable_atomic.hpp  reader.hpp  shm_log_reader.hpp  shm_log_writer.hpp  shm_platform.hpp  shm_platform_posix.hpp  shm_platform_windows.cpp  shm_platform_windows.hpp  version.cpp  version.hpp  writer.hpp
src/ouroboros/detail/: atomic.cpp  atomic.hpp  buffer_format.hpp  portable_atomic.cpp  portable_atomic.hpp  shm_platform_posix.hpp  shm_platform_windows.cpp  shm_platform_windows.hpp  span.hpp
test/: ouroboros_tests.cpp
test/src/: test_buffer_format.cpp  test_log.cpp  test_reader_writer.cpp  test_shm.cpp  test_shm_log.cpp
tools/: shm_dumper.cpp  shm_generator.cpp
